--- a/config/app.yml
+++ b/config/app.yml
@@ -3,8 +3,8 @@ default:
     port: 8380
 
   log:
-   level: info
-   pretty: true
+    level: info
+    pretty: true
 
   microservice:
     server:
@@ -12,7 +12,7 @@ default:
 
 production:
   log:
-   pretty: false
+    pretty: false
 
 test:
   server:
@@ -20,3 +20,10 @@ test:
 
   log:
     level: debug
+
+container:
+  log:
+    level: debug
+    pretty: false
+
+
