Use different port in container and pretty print the log.

--- a/config/app.yml
+++ b/config/app.yml
@@ -22,8 +22,10 @@ test:
     level: debug
 
 container:
+  server:
+    port: 8010
   log:
     level: debug
-    pretty: false
+    pretty: true
 
 
